<resources>
    <string name="app_name">Quty.Launch</string>
    <string name="cancel">Отмена</string>
    <string name="close">Закрыть</string>
    <string name="delete">Удалить</string>
    <string name="back">Назад</string>
    <string name="empty"> </string>
    <string name="unknown_code">\?</string>
    <string name="permission_granted">Разрешено</string>
    <string name="permission_denied">Не разрешено</string>
    <string name="version_unknown">Неизвестный</string>
    <string name="unknown">Неизвестно</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_fragment">Название фрагмента</string>
    <string name="settings_menu_main">Основное</string>
    <string name="settings_menu_main_desc">Быстрые настройки</string>
    <string name="settings_menu_personalization">Персонализация</string>
    <string name="settings_menu_personalization_desc">Оболочка и оформление</string>
    <string name="settings_menu_storage">Память</string>
    <string name="settings_menu_storage_desc">Управление данными</string>
    <string name="settings_menu_api_methods">API методы</string>
    <string name="settings_menu_api_methods_desc">Доступ оболочки</string>
    <string name="settings_menu_updates">Центр обновления</string>
    <string name="settings_menu_updates_desc">Проверка обновлений</string>
    <string name="settings_menu_developer">Разработчикам</string>
    <string name="settings_menu_developer_desc">Инструменты и отладка</string>
    <string name="settings_menu_recovery">Восстановление и сброс</string>
    <string name="settings_menu_recovery_desc">Управление настройками</string>
    <string name="settings_menu_about">О системе</string>
    <string name="settings_menu_about_desc">Версия, устройство</string>
    <string name="settings_api_methods_title">API методы</string>
    <string name="settings_developer_title">Разработчикам</string>
    <string name="settings_recovery_title">Восстановление и сброс</string>
    <string name="settings_close">Закрыть</string>
    <string name="settings_developer_desc">Здесь будут:\n• Отладка WebView\n• Информация об оболочке\n• Системная информация\n• Управление данными\n• Управление логами\n• Инструменты</string>
    <string name="settings_recovery_desc">Здесь будут:\n• Экспорт/Импорт настроек</string>
    <string name="settings_theme_title">Тема оформления</string>
    <string name="settings_theme_light">Светлая</string>
    <string name="settings_theme_light_desc">Всегда светлая</string>
    <string name="settings_theme_dark">Тёмная</string>
    <string name="settings_theme_dark_desc">Всегда тёмная</string>
    <string name="settings_theme_system">Системная</string>
    <string name="settings_theme_system_desc">Следует за системой</string>
    <string name="orientation_auto_desc">Системная</string>
    <string name="orientation_portrait_desc">Вертикальная</string>
    <string name="orientation_landscape_desc">Горизонтальная</string>
    <string name="settings_language_title">Язык</string>
    <string name="settings_language_russian">Русский</string>
    <string name="settings_language_russian_desc">Русский язык</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_english_desc">Английский язык</string>
    <string name="toast_language_ru">Язык изменён на русский</string>
    <string name="toast_language_en">Language changed to English</string>
    <string name="settings_personalization_active_shell">Активная оболочка</string>
    <string name="settings_personalization_no_shell">Активная оболочка не найдена</string>
    <string name="settings_personalization_open_store">Больше оболочек в Store</string>
    <string name="settings_personalization_color_scheme_title">Цветовая схема</string>
    <string name="settings_personalization_shell_info_title">Информация об оболочке</string>
    <string name="settings_personalization_shell_info_name">Название</string>
    <string name="settings_personalization_shell_info_version">Версия</string>
    <string name="settings_personalization_shell_info_author">Автор</string>
    <string name="settings_personalization_shell_info_type">Тип</string>
    <string name="settings_personalization_shell_info_min_version">Мин. версия Quty.Launch</string>
    <string name="settings_personalization_shell_info_orientation">Ориентация</string>
    <string name="settings_personalization_shell_info_repo">Репозиторий</string>
    <string name="settings_personalization_shell_info_repo_open">Открыть</string>
    <string name="settings_personalization_shell_info_repo_error">Не удалось открыть ссылку</string>
    <string name="shell_info_orientation_none">Не задана</string>
    <string name="storage_storage_title">Управление памятью</string>
    <string name="storage_data_title">Данные приложения</string>
    <string name="storage_category_cache">Кэш</string>
    <string name="storage_category_logs">Логи</string>
    <string name="storage_category_temp">Временные файлы</string>
    <string name="storage_category_updates">Обновления</string>
    <string name="storage_category_shells">Оболочки</string>
    <string name="storage_category_exports">Экспорты</string>
    <string name="storage_category_backups">Резервные копии</string>
    <string name="storage_empty_state">Нет данных для отображения</string>
    <string name="storage_nothing_to_clear">Нечего очищать</string>
    <string name="storage_clear_title">Очистка</string>
    <string name="storage_clear_button">Очистить выбранное</string>
    <string name="storage_cleared_multiple_toast">Выбранные категории очищены</string>
    <string name="api_methods_empty">Нет зарегистрированных методов</string>
    <string name="api_methods_other_header">Остальные методы</string>
    <string name="api_methods_active_header" formatted="false">Используется оболочкой «%s»</string>
    <string name="api_methods_active_counter" formatted="false">%1$d из %2$d</string>
    <string name="api_methods_legend_title">Цвета галочек</string>
    <string name="api_methods_legend_green">Метод заявлен в manifest и используется оболочкой</string>
    <string name="api_methods_legend_orange">Метод используется, но НЕ заявлен в manifest оболочки</string>
    <string name="api_methods_legend_gray">Метод заявлен в manifest, но пока не вызывался</string>
    <string name="api_methods_legend_ok">Понятно</string>
    <string name="api_getapps_desc">Список установленных приложений</string>
    <string name="api_launchapp_desc">Запуск приложения по пакету</string>
    <string name="api_getstatusbar_desc">Сигнал сети, Wi-Fi, батарея</string>
    <string name="api_getsysteminfo_desc">Информация об устройстве</string>
    <string name="api_getcorestate_desc">Состояние ядра для оболочки</string>
    <string name="toast_theme_light_enabled">Светлая тема включена</string>
    <string name="toast_theme_dark_enabled">Тёмная тема включена</string>
    <string name="toast_theme_system_enabled">Режим "Следовать за системой" включен</string>
    <string name="toast_fullscreen_enabled">Полноэкранный режим включён</string>
    <string name="toast_fullscreen_disabled">Полноэкранный режим выключен</string>
    <string name="toast_strict_mode_enabled">Строгий режим включён</string>
    <string name="toast_strict_mode_disabled">Строгий режим выключен</string>
    <string name="toast_orientation_auto">Авто-ориентация включена</string>
    <string name="toast_orientation_portrait">Портретная ориентация включена</string>
    <string name="toast_orientation_landscape">Ландшафтная ориентация включена</string>
    <string name="parameters_title">Параметры</string>
    <string name="tab_parameters_shell">Оформление</string>
    <string name="tab_parameters_display">Экран</string>
    <string name="tab_parameters_system">Система</string>
    <string name="tab_parameters_developer">DevMode</string>
    <string name="dialog_apply_parameters_title">Применить параметры</string>
    <string name="dialog_apply_parameters_message">Для применения некоторых настроек может потребоваться перезапустить приложение. Сделать это сейчас?</string>
    <string name="dialog_restart">Перезапустить</string>
    <string name="dialog_later">Позже</string>
    <string name="parameters_shell_title">Выберите оболочку оформления:</string>
    <string name="parameters_orientation_title">Ориентация экрана</string>
    <string name="parameters_additional_title">Дополнительные параметры</string>
    <string name="parameters_color_scheme_title">Цветовая схема</string>
    <string name="install_shell_from_file">Импортировать оболочку</string>
    <string name="select_shell_title">Выберите файл оболочки (.qutyshell)</string>
    <string name="invalid_shell_extensions" formatted="false">Выбранный файл не является оболочкой Quty.Launch (требуется .qutyshell, .qsp или .qutyshellpack)</string>
    <string name="shell_install_success" formatted="false">Оболочка "%s" успешно установлена!</string>
    <string name="shell_install_error">Ошибка установки оболочки</string>
    <string name="shell_install_confirm">Установить оболочку</string>
    <string name="shell_install_confirm_message" formatted="false">Вы уверены, что хотите установить оболочку "%s" версии %s?</string>
    <string name="shell_already_exists" formatted="false">Оболочка "%s" уже существует. Перезаписать?</string>
    <string name="shell_incompatible">Оболочка несовместима с текущей версией Quty.Launch</string>
    <string name="shell_min_launcher_version" formatted="false">Требуется Quty.Launch версии: %s</string>
    <string name="shell_menu_description">Меню оболочки</string>
    <string name="shell_menu_apply">Применить</string>
    <string name="shell_menu_delete">Удалить</string>
    <string name="shell_menu_share">Поделиться</string>
    <string name="shell_menu_info">Информация</string>
    <string name="shell_menu_check_updates">Проверить обновления</string>
    <string name="shell_delete_confirm">Удалить оболочку?</string>
    <string name="shell_delete_message" formatted="false">Вы уверены, что хотите удалить оболочку "%s"?</string>
    <string name="shell_delete_success" formatted="false">Оболочка "%s" удалена</string>
    <string name="shell_delete_error">Ошибка при удалении оболочки</string>
    <string name="_0">0%</string>
    <string name="version_format" formatted="false">Версия: %s</string>
    <string name="welcome_title">Добро пожаловать в Quty.Launch!</string>
    <string name="welcome_subtitle">Для корректной работы приложения необходимо предоставить доступ к функциям устройства:</string>
    <string name="welcome_button_grant">Предоставить доступ</string>
    <string name="welcome_button_retry">Повторить запрос</string>
    <string name="welcome_button_settings">Открыть настройки</string>
    <string name="welcome_permission_denied_title">Разрешения не предоставлены</string>
    <string name="welcome_permission_denied_message">Для корректной работы Quty.Launch необходимы все разрешения. Пожалуйста, предоставьте доступ в настройках.</string>
    <string name="logger_title">🐞 Логгер</string>
    <string name="logger_clear">Очистить</string>
    <string name="logger_copy">Копировать</string>
    <string name="logger_pause">Пауза</string>
    <string name="logger_close">Закрыть</string>
    <string name="logger_save">Сохранить логи</string>
    <string name="logger_share">Поделиться логами</string>
    <string name="logger_status" formatted="false">Всего логов: %d</string>
    <string name="logger_paused">Сбор логов приостановлен</string>
    <string name="store_install">Установить</string>
    <string name="store_detail_title">Оболочка</string>
    <string name="store_version">Версия</string>
    <string name="store_date">Дата</string>
    <string name="store_size">Размер</string>
    <string name="store_description">Описание</string>
    <string name="store_author_label">Автор: </string>
    <string name="store_preview_description">Превью оболочки</string>
</resources>